# WaveML

./: .gitignore  CHANGELOG.md  CHECKLIST.md  Cargo.toml  Cargo.toml.bak_rc1e_1760805536  Cargo.toml.bak_rc1f  Cargo.toml.bak_rc1g  Makefile  README.md  README.next.md  README_HOTFIX.md  README_INSTALL.md  README_MIGRATE_HOTFIX.md  README_NEXT_ITERATION.md  apply_v4_gates_patch.sh  make_waveml_zip.zsh  prune_and_relocate.zsh
.github/: PULL_REQUEST_TEMPLATE.md
acceptance/: README.md  README_COLA.md  bad_a_after_align.wml  bad_lambda_1.wml  bad_r7.wml  bad_r7_case.wml  bad_r8.wml  ok_align_after_a.wml  ok_multiline_w.wml  swaps_orbit_list.txt  tests.yaml  tests_add.yaml  tests_all.yaml  tests_auto.yaml  tests_auto_wfr.yaml  tests_ci_gate.yaml  tests_cola.yaml  tests_forge.yaml  tests_i2.yaml  tests_i2_i3.json  tests_i2_i3.yaml  tests_wfr.yaml  tests_wfr_next.yaml  thresholds.yaml
build_i23/: i23_fail_i2.wfr.json  i23_fail_i3.wfr.json  i23_pass.wfr.json
build_migrated/: forge_eq_A.nf.json  hello.wmlb.json  hello_wt.wmlb.json  hello_wt_1024_256.wmlb.json  hello_wt_2048_512.wmlb.json  i23_pass.wfr.json  overview.html
ci/: ci_doctor.sh  ci_doctor_runall.sh  deps_gate.sh  docs_gate.sh  fix_serde_yaml_dep.sh  forge_gate.sh  nf_batch_gate.sh  nf_diff_gate.sh  overview_gate.sh  perf_gate.sh  property_gate.sh  publish_overview.sh  release_artifacts.sh  run_acceptance_all.sh  run_all_gates.inline.sh  run_all_gates.sh  run_all_gates.sh.force.bak.20251017231828  run_ci_local.sh  run_fill_metrics.sh  run_i23_acceptance.sh  run_wfr_migration_and_check.sh  schema_gate.sh  strict_clippy_gate.sh  swaps_gate.sh  unit_test_gate.sh  wt_equiv_gate.sh
crates/wavectl/: Cargo.toml  Cargo.toml.bak.20251018_023913  README.md
crates/wavectl/src/: cli.rs  cmd_cola.rs  cmd_cola.rs.bak_threads_fix  cmd_forge.rs  cmd_forge_explain.rs  cmd_nf_batch.rs  cmd_nf_batch.rs.broken.bak  cmd_nf_diff.rs  cmd_report_from_graph.rs  cmd_simulate_swaps.rs  cmd_validate_wfr.rs  main.rs  main.rs.bak.20251018_023116  main.rs.bak.20251018_024408  main.rs.selfcontained  simulate_swaps.rs  swaps_gate_cli.rs
crates/wavectl/src/cmd/: forge.rs  io.rs
crates/wavectl/tests/: nf_batch.rs  nf_cli.rs
crates/waveforge/: Cargo.toml
crates/waveforge/src/: l_struct.rs  lib.rs  strict_nf.rs
crates/waveforge/tests/: determinism.rs  property_strict_nf.proptest-regressions  strict_nf.rs
crates/wmlb/: Cargo.toml
crates/wmlb/src/: lib.rs  lib.rs.bak
docs/: ACCEPTANCE.md  ACCEPTANCE_ARTIFACTS.md  ACCEPTANCE_I23.md  ACCEPTANCE_NEXT.md  ACCEPTANCE_OVERVIEW.md  CHANGELOG.md  CHANGELOG_NEXT.md  CHANGELOG_P0_METRICS.md  CHECKLIST.md  CHECKLIST_RC.md  CI-GATE.md  CI_GATES.md  CI_NEXT.md  CONTRIBUTING.md  F4P2_ScriptBatch_README.md  FIX5_WFR_sanitize_note.md  FIX6_WFR_sanitize_note.md  FIX7_WFR_perf_normalize.md  FIX9_WT_gate_optional_metrics.md  FORGE_GATE.md  HOTFIX_NOTES_F5.md  I2_I3.md  INVARIANTS.md  LOGGING.md  METRICS.md  NF_BATCH.md  PROGRESS.md  RC1b_NOTES.md  RC1d_QUICKSTART.md  RC1e_QUICKSTART.md  (+21 more)
(+188 files in other folders)
