[package]
name = "wavectl"
version = "0.3.6"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

wave_logging = { path = "../wave_logging" }
wavereport   = { path = "../wavereport" }
waveforge    = { path = "../waveforge" }
