[package]
name = "wavectl"
version = "0.3.6"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
wave_logging = { path = "../wave_logging" }
wavereport   = { path = "../wavereport" }
waveforge    = { path = "../waveforge" }
