[package]
name = "wavectl"
version = "0.3.6"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rayon = "1.10"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
waveforge = { path = "../waveforge" }
wavereport = { path = "../wavereport" }
wave_logging = { path = "../wave_logging" }
wmlb = { path = "../wmlb" }
sha2 = "0.10"
hex  = "0.4"

