[package]
name = "waveforge"
version = "0.1.0"
edition = "2021"
description = "WaveForge v0 — STRICT-NF canonicalization and stable ID for WaveML graphs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
